<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="@id/welcome_msg"
        app:layout_constraintRight_toRightOf="@id/welcome_msg"
        app:layout_constraintBottom_toTopOf="@id/welcome_msg"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo"
        app:shapeAppearance="@style/imageRounded"
        app:strokeColor="@null" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:text="@string/msg_about"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/base"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/details_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_info_about"
        android:paddingTop="@dimen/base"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/text"
        tools:ignore="SmallSp"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_reference_about"
        android:paddingTop="@dimen/basex0.5"
        app:layout_constraintTop_toBottomOf="@+id/details_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/text"
        tools:ignore="SmallSp"
        android:textIsSelectable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>